objects/hed__Address__c.object
<CustomObject>
    <description>Stores address information. To support multiple and seasonal addresses.</description>
    <label>Address</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>hed__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this Address record is inactive</description>
        <inlineHelpText>Indicates that this Address record is inactive</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Geolocation__c</fullName>
        <description>The Address expressed as latitude and longitude.</description>
        <inlineHelpText>The Address expressed as latitude and longitude.</inlineHelpText>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>hed__MailingCity__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Address_Type__c</fullName>
        <description>Select what kind of address this is, for example, Home, Work, Vacation Residence, or Other.</description>
        <inlineHelpText>Select what kind of address this is, for example, Home, Work, Vacation Residence, or Other.</inlineHelpText>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                    <label>Home</label>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Vacation Residence</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__MailingState__c</fullName>
        <label>Mailing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__MailingCounty__c</fullName>
        <description>The county detail for this Address.</description>
        <label>Mailing County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__MailingStreet__c</fullName>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__MailingCountry__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__MailingStreet2__c</fullName>
        <description>Additional street address detail for this Address, such as Suite or Apt.</description>
        <inlineHelpText>Additional street address detail for this Address, such as Suite or Apt.</inlineHelpText>
        <label>Mailing Street2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>hed__Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account associated with this Address.</description>
        <inlineHelpText>Lookup to the Account associated with this Address.</inlineHelpText>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Parent_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary Contact for this Address.</description>
        <inlineHelpText>The primary Contact for this Address.</inlineHelpText>
        <label>Parent Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Default_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is the Default Address to use for the Household and its Contacts.</description>
        <inlineHelpText>Indicates whether this is the Default Address to use for the Household and its Contacts.</inlineHelpText>
        <label>Default Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Latest_End_Date__c</fullName>
        <description>The most recent ending date that this Address was used. Generally used with Latest Start Date to track a date range for an Address that&apos;s no longer in use.</description>
        <inlineHelpText>The most recent ending date that this Address was used. Generally used with Latest Start Date to track a date range for an Address that&apos;s no longer in use.</inlineHelpText>
        <label>Latest End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Seasonal_End_Day__c</fullName>
        <description>The day of the month when this Address no longer replaces the Default Address.</description>
        <inlineHelpText>The day of the month when this Address no longer replaces the Default Address.</inlineHelpText>
        <label>Seasonal End Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Latest_Start_Date__c</fullName>
        <description>The most recent starting date that this Address was used. Generally used with Latest End Date to track a date range for an Address that&apos;s no longer in use.</description>
        <inlineHelpText>The most recent starting date that this Address was used. Generally used with Latest End Date to track a date range for an Address that&apos;s no longer in use.</inlineHelpText>
        <label>Latest Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__MailingPostalCode__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Seasonal_End_Year__c</fullName>
        <description>The year that this Address no longer replaces the Default Address.</description>
        <inlineHelpText>The year that this Address no longer replaces the Default Address.</inlineHelpText>
        <label>Seasonal End Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Seasonal_End_Month__c</fullName>
        <description>The month of the year when this Address no longer replaces the Default Address.</description>
        <inlineHelpText>The month of the year when this Address no longer replaces the Default Address.</inlineHelpText>
        <label>Seasonal End Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Seasonal_Start_Day__c</fullName>
        <description>The day of the month when this Address replaces the Default Address.</description>
        <inlineHelpText>The day of the month when this Address replaces the Default Address.</inlineHelpText>
        <label>Seasonal Start Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Seasonal_Start_Year__c</fullName>
        <description>The year that this Address replaces the Default Address.</description>
        <inlineHelpText>The year that this Address replaces the Default Address.</inlineHelpText>
        <label>Seasonal Start Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Seasonal_Start_Month__c</fullName>
        <description>The month of the year when this Address replaces the Default Address.</description>
        <inlineHelpText>The month of the year when this Address replaces the Default Address.</inlineHelpText>
        <label>Seasonal Start Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Formula_MailingAddress__c</fullName>
        <description>The full mailing address, including Mailing Street 2 and Mailing Country values, if not blank (read-only).</description>
        <formula>hed__MailingStreet__c &amp;
BR() &amp; 
IF(ISBLANK(hed__MailingStreet2__c), &quot;&quot;, hed__MailingStreet2__c &amp; BR()) &amp; 
IF(ISBLANK(hed__MailingCity__c), &quot;&quot;, hed__MailingCity__c &amp; &quot;, &quot;) &amp; 
hed__MailingState__c &amp; &quot; &quot; &amp; 
hed__MailingPostalCode__c 
&amp; IF(ISBLANK(hed__MailingCountry__c), &quot;&quot;, BR() &amp; hed__MailingCountry__c)</formula>
        <inlineHelpText>The full mailing address, including Mailing Street 2 and Mailing Country values, if not blank (read-only).</inlineHelpText>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Formula_MailingStreetAddress__c</fullName>
        <description>The full mailing address, including mailing street 2 and country values, if not blank (read-only.)</description>
        <formula>hed__MailingStreet__c &amp;
BR() &amp; 
IF(ISBLANK(hed__MailingStreet2__c), &quot;&quot;, hed__MailingStreet2__c &amp; BR()) &amp; 
IF(ISBLANK(hed__MailingCity__c), &quot;&quot;, hed__MailingCity__c &amp; &quot;, &quot;) &amp; 
hed__MailingState__c &amp; &quot; &quot; &amp; 
hed__MailingPostalCode__c 
&amp; IF(ISBLANK(hed__MailingCountry__c), &quot;&quot;, BR() &amp; hed__MailingCountry__c)</formula>
        <inlineHelpText>The full mailing address, including mailing street 2 and country values, if not blank (read-only.)</inlineHelpText>
        <label>Mailing Street Address</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>